--- a/Convenxt+@stage.ipynb
+++ b/Convenxt+@stage.ipynb
@@ -18,7 +18,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xzQx62OB6aN2",
-        "outputId": "e0bceb8a-8b3e-4226-b81e-48cfdaaab947"
+        "outputId": "e0bceb8a-8b3e-4226-b81e-48cfdaaab947",
+    "widgets": {
+      "state": {},
+      "version_major": 2,
+      "version_minor": 0
       },
       "outputs": [
         {
